# LBIBCell

./: ..gitignore~  .gitignore  .travis.yml  CMakeLists.txt  README.txt  Untitled-1.sh  install-boost.sh  install-vtk.sh  install.sh
apps/: CMakeLists.txt  shh_gradient.cpp  shh_gradient_constant_influx.cpp  speed_test.cpp  syn_tissue.cpp  syn_tissue_random_division.cpp  tutorial_01.cpp  tutorial_02.cpp
apps/config/: .ParametersIn.txt~  .ParametersIn.txt~.orig  .force.txt~  .geometry.txt~  config_circularcell.m  config_rectangularcell.m  parameters_1000_by_1000_radius_50_center.txt  shh_parameters.txt  shh_parameters_init_zero.txt  speed_test_parameters.txt  syn_tissue_parameters.txt  tutorial_01_parameters.txt  tutorial_02_geometry.txt  tutorial_02_parameters.txt
apps/config/vtk/: Cells_0.vtm  Cells_10000.vtm
apps/config/vtk/Cells_0/: Cells_0_0.vtp  Cells_0_1.vtp  Cells_0_2.vti  Cells_0_3.vti
apps/config/vtk/Cells_10000/: Cells_10000_0.vtp
apps/postprocessing/: CMakeLists.txt  visualize_all.m  visualize_connections.m  visualize_geometry.m
libs/LbmLib/: CMakeLists.txt  config.hpp.cmake
libs/LbmLib/include/: Constants.hpp  Direction.hpp  Field.hpp  GlobalSimulationParameters.hpp  SimulationRunner.hpp
libs/LbmLib/include/geometry/: Connection.hpp  Geometry.hpp  GeometryHandler.hpp
libs/LbmLib/include/nodes/: BoundaryNode.hpp  EulerianPoint.hpp  GeometryNode.hpp  LagrangianPoint.hpp  PhysicalNode.hpp
libs/LbmLib/include/reportHandler/: AbstractReportFunctor.hpp  CellTypeReporter.hpp  ConnectionReporter.hpp  DensityDomainReporter.hpp  DensityReporter.hpp  DomainReporter.hpp  FluidReporter.hpp  GeometryReporter.hpp  GridReporter.hpp  MatixAbsVelocityReporter.hpp  ReportHandler.hpp  SolverReporter.hpp  UxReporter.hpp  VelocityReporter.hpp  vtkCDEReporter.hpp  vtkCellPNGReporter.hpp  vtkCellReporter.hpp  vtkFluidReporter.hpp  vtkForceReporter.hpp
libs/LbmLib/include/solver/: AbstractForceStruct.hpp  AbstractSolver.hpp  BoundaryAbstractSolver.hpp  BoundarySolverFactory.hpp  BoundarySolverNoFlux.hpp  BoundarySolverNoFluxD2Q5.hpp  FluidSolver.hpp  ForceSolver.hpp  ForceStructs.hpp
libs/LbmLib/include/solver/BioSolver/: BioAbstractSolver.hpp  BioBaseSolver.hpp  BioSolverAreaRegulator.hpp  BioSolverCellDivision.hpp  BioSolverCellDivisionRD.hpp  BioSolverCellJunction.hpp  BioSolverDifferentiation.hpp  BioSolverEmpty.hpp  BioSolverFactory.hpp  BioSolverGrowth.hpp  BioSolverHookeanMembraneTension.hpp  BioSolverMembraneTension.hpp  BioSolverRemoveCells.hpp  tutorial_01_BioSolverAreaRegulator.hpp  tutorial_01_BioSolverCellDivision.hpp  tutorial_01_BioSolverCellJunction.hpp  tutorial_01_BioSolverDifferentiation.hpp  tutorial_01_BioSolverMembraneTension.hpp  tutorial_02_BioSolverCellDivision.hpp  tutorial_02_BioSolverCellJunction.hpp  tutorial_02_BioSolverGrowth.hpp  tutorial_02_BioSolverMembraneTension.hpp
libs/LbmLib/include/solver/CDESolver/: CDEAbstractSolver.hpp  CDESolverD2Q4.hpp  CDESolverD2Q5.hpp  CDESolverD2Q5BMP.hpp  CDESolverD2Q5HH.hpp  CDESolverD2Q5_SHH.hpp  CDESolverD2Q5_SHH_init_zero.hpp  CDESolverFactory.hpp  DiracD2Q4.hpp  DiracD2Q5.hpp  SchnakenbergD2Q4u.hpp  SchnakenbergD2Q4v.hpp  SchnakenbergD2Q5u.hpp  SchnakenbergD2Q5v.hpp  tutorial_01_CDESolverD2Q5_SIGNAL.hpp  tutorial_02_CDESolverD2Q5_L.hpp  tutorial_02_CDESolverD2Q5_R.hpp
libs/LbmLib/include/solver/FluidSolver/: BaseForceModel.hpp  FluidSolver.hpp  GuoZhengShi2002ForceModel.hpp  Luo1993ForceModel.hpp
libs/LbmLib/include/solver/MassSolver/: MassAbstractSolver.hpp  MassSolver.hpp  MassSolverBoxOutlet.hpp  MassSolverBoxOutletNoCDE.hpp  MassSolverFactory.hpp  MassSolverInFluxCDED2Q5.hpp  MassSolverNoFluxXYCDED2Q5.hpp  MassSolverNoFluxYCDED2Q5.hpp  MassSolverSchnakenberg.hpp  MassSolverSingleGrowingCell.hpp  MassSolverSingleLayer.hpp
libs/LbmLib/src/: Direction.cpp  GlobalSimulationParameters.cpp  SimulationRunner.cpp
libs/LbmLib/src/geometry/: Connection.cpp  Geometry.cpp  GeometryHandler.cpp
libs/LbmLib/src/nodes/: BoundaryNode.cpp  EulerianPoint.cpp  GeometryNode.cpp  LagrangianPoint.cpp  PhysicalNode.cpp
libs/LbmLib/src/reportHandler/: CellTypeReporter.cpp  ConnectionReporter.cpp  DensityDomainReporter.cpp  DensityReporter.cpp  DomainReporter.cpp  FluidReporter.cpp  GeometryReporter.cpp  GridReporter.cpp  MatixAbsVelocityReporter.cpp  ReportHandler.cpp  SolverReporter.cpp  UxReporter.cpp  VelocityReporter.cpp  vtkCDEReporter.cpp  vtkCellPNGReporter.cpp  vtkCellReporter.cpp  vtkFluidReporter.cpp  vtkForceReporter.cpp
libs/LbmLib/src/solver/: AbstractSolver.cpp  BoundaryAbstractSolver.cpp  BoundarySolverNoFlux.cpp  BoundarySolverNoFluxD2Q5.cpp  FluidSolver.cpp  ForceSolver.cpp
libs/LbmLib/src/solver/BioSolver/: BioSolverAreaRegulator.cpp  BioSolverCellDivision.cpp  BioSolverCellDivisionRD.cpp  BioSolverCellJunction.cpp  BioSolverDifferentiation.cpp  BioSolverEmpty.cpp  BioSolverGrowth.cpp  BioSolverHookeanMembraneTension.cpp  BioSolverMembraneTension.cpp  BioSolverRemoveCells.cpp  tutorial_01_BioSolverAreaRegulator.cpp  tutorial_01_BioSolverCellDivision.cpp  tutorial_01_BioSolverCellJunction.cpp  tutorial_01_BioSolverDifferentiation.cpp  tutorial_01_BioSolverMembraneTension.cpp  tutorial_02_BioSolverCellDivision.cpp  tutorial_02_BioSolverCellJunction.cpp  tutorial_02_BioSolverGrowth.cpp  tutorial_02_BioSolverMembraneTension.cpp
libs/LbmLib/src/solver/CDESolver/: CDEAbstractSolver.cpp  CDESolverD2Q4.cpp  DiracD2Q4.cpp  (+13 more)
libs/LbmLib/test/: CMakeLists.txt
libs/UtilLib/: CMakeLists.txt
libs/UtilLib/include/: Exception.hpp  Factory.hpp  Log.hpp  MPIProxy.hpp  ProgressBar.hpp  Singleton.hpp  TerminalColors.hpp  Timer.hpp
libs/UtilLib/include/geometry/: FastNeighborList.hpp  QuadTree.hpp  QuadTreeNode.hpp  Rectangle.hpp
libs/UtilLib/src/: Exception.cpp  Log.cpp  MPIProxy.cpp  ProgressBar.cpp
libs/UtilLib/src/geometry/: Rectangle.cpp
libs/UtilLib/test/: CMakeLists.txt  Exception_test.cpp  Factory_test.cpp  Log_test.cpp  MPIProxy_test.cpp  ProgressBar_test.cpp  Singleton_test.cpp  memtest.py
libs/UtilLib/test/geometry/: FastNeighborList_test.cpp  QuadTree_test.cpp  Rectangle_test.cpp
(+31 files in other folders)
